this is buggy code but checking in in interest of not having lot of code on local
